--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -465,7 +465,7 @@
                                 <td>{{this.encoding}} {{#if (eq this.hazardous 0)}}{{/if}}</td>
                             {{/if}}
                             {{#if (eq ../isAdmin 2)}}
-                                <td>{{this.encoding}} {{#if this.hazardous}}<i class=" material-icons" data-tooltip="I am a tooltip">warning</i>{{/if}}</td>
+                                <td>{{this.encoding}} {{#if this.hazardous}}<i class="btn tooltipped material-icons" data-position="bottom" data-tooltip="I am a tooltip">warning</i>{{/if}}</td>
                             {{/if}}
                             <td>{{this.supplier}}</td>
                             <td>{{this.amt}} {{this.unit}}</td>
