--- a/views/procedure.hbs
+++ b/views/procedure.hbs
@@ -2,69 +2,62 @@
 <html>
 
     <head>
-        
-        
-            <title>{{#each procedure_info}}{{project_name}}{{/each}} Procedure</title>
-        
+        <title>{{#each procedure_info}}{{project_name}}{{/each}} Procedure</title>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <script type="text/javascript" src="/routes/projects.js"></script>
         <link rel="stylesheet" href="/styles/color.css">
 
+        <script type="text/javascript" src="/routes/procedure.js"></script>
     </head>
+
     <style>
         .container {
         display: flex;
         }
-</style>
+    </style>
 
     <body style="display: flex; flex-direction: column;">
         
         <div style="padding: 2% 2% 0% 2%">
-        {{> navbar}}
+            {{> navbar}}
 
-
-         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-
-
-        <h1 style="padding: 25px">{{#each procedure_info}}{{project_name}}{{/each}} Procedure </h1>
+            <h1 style="padding: 25px">{{#each procedure_info}}{{project_name}}{{/each}} Procedure </h1>
        
-        <table id="my-table" class="sortable">
-            <thead>
-                <tr id = "ing">
-                    <th>Delete</th>
-                    <th>Phase</th>
-                    <th>Procedure</th>
-                    <th>Comments/Ingredients</th>
-                    <th>Initial Temperature (C)</th>
-                    <th>Final Temperature (C)</th>
-                    <th>Timing (min)</th>
-                    <th>Initial Mixing (rpm)</th>
-                    <th>Final Mixing (rpm)</th>
-                    <th>Mixer Type</th>
-                    <th>Blade</th>
-                </tr>
-            </thead>
-            <tbody>
+            <table id="my-table" class="sortable">
+                <thead>
+                    <tr id = "ing">
+                        <th>Delete</th>
+                        <th>Phase</th>
+                        <th>Procedure</th>
+                        <th>Comments/Ingredients</th>
+                        <th>Initial Temperature (C)</th>
+                        <th>Final Temperature (C)</th>
+                        <th>Timing (min)</th>
+                        <th>Initial Mixing (rpm)</th>
+                        <th>Final Mixing (rpm)</th>
+                        <th>Mixer Type</th>
+                        <th>Blade</th>
+                    </tr>
+                </thead>
 
+                <tbody>
                 {{#each results}}
+
                 <tr>
                     <td class="right-align">
                         <a href="#deleteProcedureStep{{procedure_item_id}}" class="material-icons modal-trigger">delete</a>
 
                         <div id="deleteProcedureStep{{procedure_item_id}}" class="modal">
                             <div class="modal-content">
-                            <h6>Are you sure you would like to delete this step?</h6>
+                                <h6>Are you sure you would like to delete this step?</h6>
                             </div>
                             <div class="modal-footer">
-                            <a class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger" href="/procedure/{{../project_id}}/deleteProcedureStep/{{procedure_item_id}}">YES</a>
+                                <a class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger" href="/procedure/{{../project_id}}/deleteProcedureStep/{{procedure_item_id}}">YES</a>
                             </div>
                         </div>
-
                     </td>
+
                     <td contenteditable="true">{{phase_num}}</td>
                     <td contenteditable="true">{{proc}}</td>
                     <td contenteditable="true">{{comments}}</td>
@@ -94,45 +87,45 @@
 
                                             {{!-- Field 1 --}}
                                             <b><label for="tuluble">Phase:</label></b>
-                                            <input type="number" name = "userInput1" id="userInput1" placeholder="Enter Phase Number" maxlength="20">
+                                            <input type="number" name = "phaseNumber" id="phaseNumber" placeholder="Enter Phase Number" maxlength="20">
                                             <p> </p>
 
                                             {{!-- Field 2 --}}
                                             <b><label for="tuluble">Procedure:</label></b>
-                                            <input type="text" name = "userInput2" id="userInput2" placeholder="Enter Procedure" maxlength="300">
+                                            <input type="text" name = "theProcedure" id="theProcedure" placeholder="Enter Procedure" maxlength="300">
                                             <p> </p>
 
                                             {{!-- Field 3 --}}
                                             <b><label for="tuluble">Comments/Ingredients:</label></b>
-                                            <input type="text" name = "userInput3" id="userInput3" placeholder="Enter Comments" maxlength="300">
+                                            <input type="text" name = "procComments" id="procComments" placeholder="Enter Comments" maxlength="300">
                                             <p> </p>
 
                                             <b><label for="tuluble">Initial Temperature (C):</label></b>
-                                            <input type="number" name = "userInput4" id="userInput4" placeholder="Enter Initial Temperature" maxlength="20">
+                                            <input type="number" name = "initialTemp" id="initialTemp" placeholder="Enter Initial Temperature" maxlength="20">
                                             <p> </p>
 
                                             <b><label for="tuluble">Final Temperature (C):</label></b>
-                                            <input type="number" name = "userInput5" id="userInput5" placeholder="Enter Final Temperature" maxlength="20">
+                                            <input type="number" name = "finalTemp" id="finalTemp" placeholder="Enter Final Temperature" maxlength="20">
                                             <p> </p>
 
                                             <b><label for="tuluble">Timing (min):</label></b>
-                                            <input type="text" name = "userInput6" id="userInput5" placeholder="Enter Timing" maxlength="45">
+                                            <input type="text" name = "timing" id="timing" placeholder="Enter Timing" maxlength="45">
                                             <p> </p>
 
                                             <b><label for="tuluble">Initial Mixing (rpm):</label></b>
-                                            <input type="text" name = "userInput7" id="userInput5" placeholder="Enter Initial Mixing Speed" maxlength="20">
+                                            <input type="text" name = "initialMixSpeed" id="initialMixSpeed" placeholder="Enter Initial Mixing Speed" maxlength="20">
                                             <p> </p>
 
                                             <b><label for="tuluble">Final Mixing (rpm):</label></b>
-                                            <input type="text" name = "userInput8" id="userInput5" placeholder="Enter Final Mixing Speed" maxlength="20">
+                                            <input type="text" name = "finalMixSpeed" id="finalMixSpeed" placeholder="Enter Final Mixing Speed" maxlength="20">
                                             <p> </p>
 
                                             <b><label for="tuluble">Mixer Type:</label></b>
-                                            <input type="text" name = "userInput9" id="userInput5" placeholder="Enter Mixer Type" maxlength="45">
+                                            <input type="text" name = "mixerType" id="mixerType" placeholder="Enter Mixer Type" maxlength="45">
                                             <p> </p>
 
                                             <b><label for="tuluble">Blade:</label></b>
-                                            <input type="text" name = "userInput10" id="userInput5" placeholder="Enter Blade" maxlength="45">
+                                            <input type="text" name = "blade" id="blade" placeholder="Enter Blade" maxlength="45">
                                             <p> </p>
 
                                             <div class="add_proc_button">
@@ -140,22 +133,21 @@
                                                 {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
                                             </div>
                                             <p> </p>
-                                        </form>
-
-                                    </article>
+                                        </article>
+                                    </form>
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </tr>
-            </tbody>
-        </table>
+                </tbody>
+            </table>
 
-        <script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
-        </script>
-
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+        
+     
         <script>
             $(document).ready(function() {
                 $('.modal').modal();
@@ -165,27 +157,13 @@
         <script>
             $(document).ready(function() {
                 $("#add_proc_button").click(function() {
-                var inputValue1 = $("#userInput1").val();
-                var inputValue2 = $("#userInput2").val();
-                var inputValue3 = $("#userInput3").val();
-                var inputValue4 = $("#userInput4").val();
-                var inputValue5 = $("#userInput5").val();
-                var inputValue6 = $("#userInput6").val();
-                var inputValue7 = $("#userInput7").val();
-                var inputValue8 = $("#userInput8").val();
-                var inputValue9 = $("#userInput9").val();
-                var inputValue10 = $("#userInput10").val();
-
-                console.log("still in procedure");
-
-
                 window.location.href += "/procformsubmit";
                 //$(window).attr("location", "inventoryformsubmit/" + inputValue1);
                 });
             });
         </script>
 
-         <script>
+        <script>
             const editableCells = document.querySelectorAll('[contenteditable="true"]');
             
             editableCells.forEach(cell => {
@@ -199,7 +177,7 @@
                 }
             });
 
-             cell.addEventListener('blur', function () {
+            cell.addEventListener('blur', function () {
             const editedContent = cell.innerText;
             if (originalContent !== editedContent) {
                 const phase = cell.parentNode.rowIndex; // Get the phase number
@@ -212,14 +190,9 @@
                 window.location.href += "/cellEdited/" + phase + "/" + column + "/" + editedContent;
                 // Perform further actions with the edited content, phase, and column
             }
-        });
             });
-
+            });
         </script>
 
-
-        
-
     </body>
-
 </html>
