--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -198,33 +198,34 @@
                                                             {{!-- <h2>Textbook</h2> --}}
 
                                                             <b><label for="tuluble">Project Name:</label></b>
-                                                            <input type="text" name = "userInput1" id="userInput1" value="{{this.project_name}}">
+                                                            <input type="text" name = "editProjectName" id="editProjectName" value="{{this.project_name}}">
                                                             <p> </p>
 
                                                             {{!-- Field 2 --}}
                                                             <b><label for="tuluble">Client Name:</label></b>
-                                                            <input type="text" name = "userInput2" id="userInput2" value="{{this.client}}">
+                                                            <input type="text" name = "editClientName" id="editClientName" value="{{this.client}}">
                                                             <p> </p>
 
                                                             {{!-- Field 3 --}}
                                                             <b><label for="tuluble">Date Started:</label></b>
-                                                            <input type="date" name = "userInput3" id="userInput3" value="{{formatDate this.date}}">
+                                                            <input type="date" name = "editDate" id="editDate" value="{{formatDate this.date}}">
                                                             <p> </p>
 
                                                             {{!-- Field 4 --}}
                                                             <b><label for="tuluble">Contact Name:</label></b>
-                                                            <input type="text" name = "contactName1" id="contactName1" value="{{this.client_name}}">
+                                                            <input type="text" name = "editContact" id="editContact" value="{{this.client_name}}">
                                                             <p> </p>
 
                                                             {{!-- Field 5 --}}
                                                             <b><label for="tuluble">Contact Email:</label></b>
-                                                            <input type="text" name = "contactEmail1" id="contactEmail1" value="{{this.client_email}}">
+                                                            <input type="text" name = "editEmail" id="editEmail" value="{{this.client_email}}">
                                                             <p> </p>
 
                                                             <div class="update_button">
                                                                 <button id = "update_button" name = "update_button" type="submit" class="btn waves-effect waves-luluble-pink luluble-pink">Finish Editing</button>
                                                                 {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
                                                             </div>
+                                                            
                                                             <p> </p>
                                                         </form>
                                                     </article>
@@ -277,21 +278,6 @@
 
             {{/each}}
 
-            <script>
-                $(document).ready(function() {
-                    $("#update_button").click(function() {
-
-                    const inputValueU1 = $("#userInputU1").val();
-                    const inputValueU2 = $("#userInputU2").val();
-                    const inputValueU3 = $("#userInputU3").val();
-                    const clientName1 = $("#clientName1").val();
-                    const clientEmail1 = $("#clientEmail1").val();
-
-                    window.location += "projectupdate";
-                    //$(window).attr("location", "inventoryformsubmit/" + inputValue1);
-                    });
-                });
-            </script>
 
             </div>
             {{!-- <a href="/created" class="btn-floating btn-large orange fixed-action-btn">
@@ -313,27 +299,27 @@
 
                                 {{!-- Field 1 --}}
                                 <b><label for="tuluble">Project Name:</label></b>
-                                <input type="text" name = "userInputP1" id="userInputP1" placeholder="Enter Project Name" maxlength="100">
+                                <input type="text" name = "newProjectName" id="newProjectName" placeholder="Enter Project Name" maxlength="100">
                                 <p> </p>
 
                                 {{!-- Field 2 --}}
                                 <b><label for="tuluble">Client Name:</label></b>
-                                <input type="text" name = "userInputP2" id="userInputP2" placeholder="Enter Client Name" maxlength="100">
+                                <input type="text" name = "newClientName" id="newClientName" placeholder="Enter Client Name" maxlength="100">
                                 <p> </p>
 
                                 {{!-- Field 3 --}}
                                 <b><label for="tuluble">Date Started:</label></b>
-                                <input type="date" name = "userInputP3" id="userInputP3" placeholder="Enter Date Started">
+                                <input type="date" name = "newDate" id="newDate" placeholder="Enter Date Started">
                                 <p> </p>
 
                                 {{!-- Field 2 --}}
                                 <b><label for="tuluble">Contact Name:</label></b>
-                                <input type="text" name = "contactName" id="contactName" placeholder="Enter Contact Name" maxlength="100">
+                                <input type="text" name = "newContact" id="newContact" placeholder="Enter Contact Name" maxlength="100">
                                 <p> </p>
 
                                 {{!-- Field 2 --}}
                                 <b><label for="tuluble">Contact Email:</label></b>
-                                <input type="text" name = "contactEmail" id="contactEmail" placeholder="Enter Contact Email" maxlength="80">
+                                <input type="text" name = "newEmail" id="newEmail" placeholder="Enter Contact Email" maxlength="80">
                                 <p> </p>
 
                                
