--- a/views/archive.hbs
+++ b/views/archive.hbs
@@ -200,7 +200,7 @@
                                             <div class="col s12"><b><font size="+2">Ingredient Information</font></b></div>
                                             <div class="col s12">&nbsp;</div>
                                             <div class="col s6">
-                                                <span><b>Trade Name:</b> {{this.trade_name}}<br></br><b>INCI Name:</b> {{this.inci_name}}<br></br><b>Amount Available:</b> {{this.amt}} {{this.unit}}<b></b><b>Supplier:</b> {{this.supplier}}<br></br><b>TSCA Approved:</b> {{this.tsca_approved}}</span>
+                                                <span><b>Trade Name:</b> {{this.trade_name}}<br></br><b>INCI Name:</b> {{this.inci_name}}<br></br><b>Amount Available:</b> {{this.amt}} {{this.unit}}<b></b><b>Supplier:</b> {{this.supplier}}<br></br></span>
                                                 {{!-- <span>Ingredient:<br></br>Supplier:<br></br>Trade Name:<br></br>INCI Name:</span> --}}
                                             </div>
                                             <div class="col s6">
