--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -64,24 +64,24 @@
                                 {{!-- <h2>Textbook</h2> --}}
 
                                 {{!-- Field 1 --}}
-                                <b><label for="tuluble">INCI Name:</label></b>
+                                <b><label for="tuluble">INCI Name:*</label></b>
                                 <input type="text" name="inci_name" required id="inci_name" placeholder="Enter INCI Name"
                                     maxlength="20" pattern="^[a-zA-Z0-9\s/-%\()]*$">
                                 <p> </p>
 
                                 {{!-- Field 2 --}}
-                                <b><label for="tuluble">Trade Name:</label></b>
+                                <b><label for="tuluble">Trade Name:*</label></b>
                                 <input type="text" name="trade_name" required id="trade_name" placeholder="Enter Trade Name"
                                     maxlength="20" pattern="^[a-zA-Z0-9\s()-]*$">
                                 <p> </p>
 
-                                <b><label for="tuluble">Encoding:</label></b>
+                                <b><label for="tuluble">Encoding:*</label></b>
                                 <input type="text" name="encoding" required id="encoding" placeholder="Enter Ingredient Encoding"
                                     maxlength="20" pattern="^[a-zA-Z0-9\s]*$">
                                 <p> </p>
                                 <br>
 
-                                <b><label for="tuluble">Hazardous?</label></b>
+                                <b><label for="tuluble">Hazardous?*</label></b>
                                 <div class="switch">
                                 <label>
                                     No
@@ -100,18 +100,18 @@
                                 </div>
 
                                 {{!-- Field 3 --}}
-                                <b><label for="tuluble">Amount Available:</label></b>
+                                <b><label for="tuluble">Amount Available:*</label></b>
                                 <input type="number" name="amt" required id="amt" placeholder="Enter Amount"
                                     maxlength="20">
                                 <p> </p>
 
                                 {{!-- Field 4 --}}
-                                <b><label for="tuluble">Shelf:</label></b>
+                                <b><label for="tuluble">Shelf:*</label></b>
                                 <input type="text" name="shelf" required id="shelf" placeholder="Enter Shelf"
                                     maxlength="20" pattern="^[a-zA-Z0-9\s]*$">
                                 <p> </p>
 
-                                <b><label for="tuluble">Classifier:</label></b>
+                                <b><label for="tuluble">Classifier:*</label></b>
                                 {{!-- <input type="text" name="userInput5" id="userInput5" placeholder="Enter Classifier"
                                     maxlength="20"> --}}
                                 <select name="classifier" required id="classifier" class="browser-default">
@@ -133,36 +133,36 @@
                                 <p> </p>
                                 <p> &nbsp;</p>
 
-                                <b><label for="tuluble">Lot Number:</label></b>
+                                <b><label for="tuluble">Lot Number:*</label></b>
                                 <input type="text" name="lot_num" required id="lot_num" placeholder="Enter Lot Number"
                                     maxlength="20" pattern="^[a-zA-Z0-9\s]*$">
                                 <p> </p>
 
                                 <b><label for="tuluble">Cost Per Kilo:</label></b>
-                                <input type="text" name="cost" required id="cost" placeholder="Enter Cost Per Kilo"
+                                <input type="text" name="cost" id="cost" required placeholder="Enter Cost Per Kilo"
                                     maxlength="20" pattern="^[a-zA-Z0-9\s]*$">
                                 <p> </p>
 
-                                <b><label for="tuluble">Expiration Date:</label></b>
+                                <b><label for="tuluble">Expiration Date:*</label></b>
                                 <input type="date" name="expiration" required id="expiration" placeholder="Enter Expiration Date">
                                 <p> </p>
 
-                                <b><label for="tuluble">Date Recieved:</label></b>
+                                <b><label for="tuluble">Date Received:*</label></b>
                                 <input type="date" name="date_received" required id="date_received" placeholder="Enter Date Received">
                                 <p> </p>
 
-                                <b><label for="tuluble">Supplier:</label></b>
+                                <b><label for="tuluble">Supplier:*</label></b>
                                 <input type="text" name="supplier" required id="supplier" placeholder="Enter Supplier"
                                     maxlength="45" pattern="^[a-zA-Z0-9\s]*$">
                                 <p> </p>
 
-                                <b><label for="tuluble">COA Documents:</label></b>
-                                <input type="url" name="coa" required id="coa" placeholder="Enter Link"
+                                <b><label for="tuluble">COA Documents:*</label></b>
+                                <input type="url" name="coa" id="coa" required placeholder="Enter Link"
                                     maxlength="200">
                                 <p> </p>
 
-                                <b><label for="tuluble">MSDS Documents:</label></b>
-                                <input type="url" name="msds" required id="msds" placeholder="Enter Link"
+                                <b><label for="tuluble">MSDS Documents:*</label></b>
+                                <input type="url" name="msds" id="msds" required placeholder="Enter Link"
                                     maxlength="200">
                                 <p> </p>
 
@@ -250,26 +250,6 @@
                 });
             </script>
 
-       
-            {{!-- <script>
-                const select = document.querySelector('#myDropdown');
-                let selectedOption;
-
-                select.addEventListener('change', (event) => {
-                    selectedOption = event.target.value;
-
-                    if (window.location.href.indexOf("inventory/") !== -1) {
-                        window.location.href = "/inventory/" + selectedOption;
-                    }
-                    else {
-                        window.location.href = "/inventory/" + selectedOption;
-                    }
-                    sleep(1000);
-                    let header = document.getElementById("inventoryTitle");
-                    console.log(header);
-                });
-                header.innerHTML = "Inventory - " + selectedOption;
-            </script> --}}
 
             <script>
                 $(document).ready(function () {
@@ -368,6 +348,7 @@
                 <table id="my-table" class="scrollable">
                     <thead>
                         <tr id="ing">
+                            {{#ifEitherTrue (eq isAdmin 1) (eq isAdmin 2)}}
                             <th id="inci">INCI Name
                                 <a id="sort-inci-button" class="waves-effect">
                                     <i class="large material-icons" style="font-size: 20px">arrow_drop_down</i>
@@ -379,6 +360,7 @@
                                     <i class="large material-icons" style="font-size: 20px">arrow_drop_down</i>
                                 </a>
                             </th>
+                            {{/ifEitherTrue}}
                             <th id="trade">Ingredient ID
                                 <a id="sort-trade-button" class="waves-effect">
                                     <i class="large material-icons" style="font-size: 20px">arrow_drop_down</i>
@@ -411,7 +393,7 @@
                     <tbody>
                         {{#each results}}
                         <tr>
-                            {{#if ../isAdmin}}
+                            {{#ifEitherTrue (eq ../isAdmin 1) (eq ../isAdmin 2)}}
                             <td>{{this.inci_name}}
                                 <a href="#terms{{ingredient_id}}" class="modal-trigger">
                                     <span class="large material-icons">info_outline</span>
@@ -425,18 +407,19 @@
                                         <div class="col s12">&nbsp;</div>
                                         <div class="col s6">
                                             
-                                                <b>Trade Name:</b> {{this.trade_name}}<br></br>
-                                                <b>INCI Name:</b> {{this.inci_name}}<br></br>
-                                                <b>Amount Available:</b> {{this.amt}} {{this.unit}}<br></br>
+                                                <b>Trade Name: </b> {{this.trade_name}}<br></br>
+                                                <b>INCI Name: </b> {{this.inci_name}}<br></br>
+                                                <b>Amount Available: </b> {{this.amt}} {{this.unit}}<br></br>
                                                 <b>Supplier:</b> {{this.supplier}}<br></br>
-                                                <b>Lot Number:</b> {{this.lot_num}}<br></br>
-                                                <b>Shelf:</b> {{this.shelf}}<br></br>
-                                                <b>Cost:</b> {{this.cost}}<br></br>
+                                                <b>Lot Number: </b> {{this.lot_num}}<br></br>
+                                                <b>Shelf: </b> {{this.shelf}}<br></br>
+                                                <b>Cost: </b> {{this.cost}}<br></br>
                                         </div>
                                         <div class="col s6">
-                                            <span><b>TSCA Approved:</b> {{this.tsca_approved}}<br></br>
-                                                <b>Date Receieved:</b>{{formatDate this.date_received}}<br></br>
-                                                <b>Expiration Date:</b>{{formatDate this.expiration}}<br></br>
+                                            <span>
+                                                <b>Classifier: </b>{{this.classifier_id}}<br></br>
+                                                <b>Date Receieved: </b>{{formatDate this.date_received}}<br></br>
+                                                <b>Expiration Date: </b>{{formatDate this.expiration}}<br></br>
                                                 <b>COA:</b> <a href="{{this.coa}}">Link</a><br></br>
                                                 <b>MSDS:</b> <a href="{{this.msds}}">Link</a><br></br>
                                         </div>
@@ -445,13 +428,10 @@
                                     </div>
                                 </div>
                             </td>
-                            <td>{{this.trade_name}}</td>                       
-                            {{else}}
-                                <td>{{this.encoding}} {{#if (eq this.hazardous 0)}}{{/if}}</td>
-                            {{/if}}
-                            {{#if (eq ../isAdmin 2)}}
-                                <td>{{this.encoding}} {{#if this.hazardous}}<i class="btn tooltipped material-icons" data-position="bottom" data-tooltip="I am a tooltip">warning</i>{{/if}}</td>
-                            {{/if}}
+                            <td>{{this.trade_name}}</td>             
+                            {{/ifEitherTrue}}
+
+                            <td>{{this.encoding}} {{#if this.hazardous}}<i class="btn tooltipped material-icons" data-position="bottom" data-tooltip="I am a tooltip">warning</i>{{/if}}</td>
                             <td>{{this.supplier}}</td>
                             <td>{{this.amt}} {{this.unit}}</td>
                             <td>{{this.shelf}}</td>
