--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -363,7 +363,7 @@
                             </td>
                             <td>{{this.trade_name}}</td>             
                             {{/ifEitherTrue}}
-                            <td>{{this.encoding}} {{#if this.hazardDetails}}<i class="btn tooltipped material-icons" data-position="bottom" data-tooltip="{{hazardDetails}}">warning</i>{{/if}}</td>
+                            <td>{{this.encoding}} {{#if this.hazardDetails}}<i class="tooltipped material-icons" data-position="bottom" data-tooltip="{{hazardDetails}}">warning</i>{{/if}}</td>
                             <td>{{this.supplier}}</td>
                             <td>{{this.amt}} {{this.unit}}</td>
                             <td>{{this.shelf}}</td>
