Inventory + index + procedure

--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -178,7 +178,7 @@
                                     <a href="#deleteFormulaIngredient{{ingredient_id}}" class="material-icons modal-trigger">delete</a>
 
                                     <div id="deleteFormulaIngredient{{ingredient_id}}" class="modal">
-                                        <div class="modal-content">
+                                        <div class="modal-content left-align">
                                         <h6>Are you sure you would like to delete this ingredient?</h6>
                                         </div>
                                         <div class="modal-footer">
