--- a/views/procedure.hbs
+++ b/views/procedure.hbs
@@ -49,7 +49,7 @@
                         <a href="#deleteProcedureStep{{procedure_item_id}}" class="material-icons modal-trigger">delete</a>
 
                         <div id="deleteProcedureStep{{procedure_item_id}}" class="modal">
-                            <div class="modal-content">
+                            <div class="modal-content left-align">
                                 <h6>Are you sure you would like to delete this step?</h6>
                             </div>
                             <div class="modal-footer">
